# prompt-scribe

./: .gitignore  LICENSE  README.md  prompts.yml  pyproject.toml
.gemini/: ARCHITECTURE.md  DEVELOPMENT.md  GEMINI.md  TOOLS.md  dev_create_qwen_symlinks.py  settings.json  settings.json.orig
.gemini/commands/: task.toml  update_docs.toml  update_tests.toml  update_tests_docs.toml
.qwen/: settings.json
.qwen/agents/: comment-language-enforcer.md  frontend-expert.md  task-planner.md
.qwen/commands/: generate_report.toml  task.toml  test.toml
docs/en/development/: ARCHITECTURE.md  DEVELOPMENT.md
local_reports/: feat_implement_robust_dynamic_watcher.md  feat_improve_error_handling_and_add_config.md  feat_improve_variable_substitution_and_file_handling.md  feat_improve_watch_dependency_tracking.md  feat_initial_prompt_scribe_implementation.md  feat_semantic_markdown_composition.md  refactor_add_scaffolding_system.md  refactor_final_cleanup_and_bugfix.md  refactor_improve_composer_engine_and_fix_watcher_bug.md  refactor_prompt_composition_engine.md
project_goals/: refactor-prompt-assembly-logic.md
src/promptscribe/: __main__.py  cli.py  composer.py  ui.py
src/promptscribe/project_template/: code-reviewer.md  master.jinja2  prompts.yml  report.jinja2  source-data.json
src/promptscribe/scaffolds/default/: prompts.yml
src/promptscribe/scaffolds/dev-kit/: prompts.yml
src/promptscribe/scaffolds/example/: prompts.yml
src/promptscribe/scaffolds/example/includes/: development-rules.md
temp/: task.md
